Ajuste da side bar

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -5,10 +5,8 @@ repo_url: https://github.com/Franzininho/exemplos-esp-idf
 
 nav:
     - Primeiros passos: index.md
-    - Exemplos:
-        - Entrada digital: exemplos/entrada_digital.md
-        - Saída Digital: exemplos/saida_digital.md
-    - Sobre: about.md
+    - Hello, World": 0x01-Hello-world.md
+
 
 
 theme:
