--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -5,7 +5,8 @@ repo_url: https://github.com/Franzininho/exemplos-esp-idf
 
 nav:
     - Primeiros passos: index.md
-    - Hello, World": 0x01-Hello-world.md
+    - Hello, World!: 0x01-Hello-world.md
+    - Entrada digital: 0x02-entrada-digital.md
 
 
 
