--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
     - Primeiros passos: index.md
     - Hello, World!: 0x01-Hello-world.md
     - Entrada digital: 0x02-entrada-digital.md
+    - Entrada Analógica: 0x03-entrada-analogica.md
 
 
 
