--- a/exemplos/ESP_NOW/main/CMakeLists.txt
+++ b/exemplos/ESP_NOW/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c"
+idf_component_register(SRCS "esp_now_protocol.c" "main.c"
                     INCLUDE_DIRS ".")
