--- a/exemplos/WiFi-Web-Server/main/CMakeLists.txt
+++ b/exemplos/WiFi-Web-Server/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "main.c" "dns_server.c"
+                    INCLUDE_DIRS "include"
+                    EMBED_FILES index.html)
